# opencode_explorer

./: Cargo.toml  LICENSE  README.md
.opencode/plugins/: test.ts
src/: main.rs
