[package]
name = "opencode_explorer"
version = "0.1.0"
description = "An example generated using the hello-world template"
authors = ["Christian Griggs <griggsca91@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.29.0"
ratatui = "0.30.0"
rusqlite = "0.39.0"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
